--- a/client/app/index-async.html
+++ b/client/app/index-async.html
@@ -38,7 +38,7 @@
       'components/version/interpolate-filter.js'
     ], function() {
       // when all is done, execute bootstrap angular application
-      angular.bootstrap(document, ['myApp']);
+      angular.bootstrap(document, ['j9dl']);
     });
   </script>
   <title>My AngularJS App</title>
