--- a/client/app/register.html
+++ b/client/app/register.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>J9DL Login</title>
+    <title>J9DL Registration</title>
 
     <!-- Bootstrap -->
    <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">  
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="register.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 
 
@@ -20,13 +20,15 @@
 
     <div class="container">
       <form class="form-signin">
-        <h2 class="form-signin-heading">J9DL Log In</h2>
+        <h2 class="form-signin-heading">J9DL Registration</h2>
         <label for="inputUsername" class="sr-only">Username</label>
         <input type="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <label for="inputEmail" class="sr-only">Email (optional)</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email (optional)">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a href="register.html">Don't have an account? Register here</a>
+        <a href="login.html">Already have an account? Sign in here</a>
       </form>
     </div>
 
