--- a/web/client/app/login/login.html
+++ b/web/client/app/login/login.html
@@ -1,3 +1,13 @@
 <div class="col-md-12">
-This is the login view.
+    <div class="container">
+      <form class="form-signin">
+        <h2 class="form-signin-heading">J9DL Log In</h2>
+        <label for="inputUsername" class="sr-only">Username</label>
+        <input type="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <a href="/register">Don't have an account? Register here</a>
+      </form>
+    </div>
 </div>
