--- a/web/client/app/register/register.html
+++ b/web/client/app/register/register.html
@@ -1,3 +1,15 @@
 <div class="col-md-12">
-This is the register view.
+	<div class="container">
+	  <form class="form-signin">
+	    <h2 class="form-signin-heading">J9DL Registration</h2>
+	    <label for="inputUsername" class="sr-only">Username</label>
+	    <input type="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+	    <label for="inputPassword" class="sr-only">Password</label>
+	    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+	    <label for="inputEmail" class="sr-only">Email (optional)</label>
+	    <input type="email" id="inputEmail" class="form-control" placeholder="Email (optional)">
+	    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	    <a href="/login">Already have an account? Sign in here</a>
+	  </form>
+	</div>
 </div>
