--- a/web/client/app/login/login.html
+++ b/web/client/app/login/login.html
@@ -3,11 +3,16 @@
       <form class="form-signin">
         <h2 class="form-signin-heading">J9DL Log In</h2>
         <label for="inputUsername" class="sr-only">Username</label>
-        <input type="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+        <input type="username" ng-model="form.username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <input type="password" ng-model="form.password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="login()">Sign in</button>
         <a href="/register">Don't have an account? Register here</a>
+        <div class="alert alert-danger" role="alert" ng-show="error">
+		  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+		  <span class="sr-only">Error:</span>
+		  {{ error }}
+		</div>
       </form>
     </div>
 </div>
