--- a/web/client/app/register/register.html
+++ b/web/client/app/register/register.html
@@ -3,13 +3,18 @@
 	  <form class="form-signin">
 	    <h2 class="form-signin-heading">J9DL Registration</h2>
 	    <label for="inputUsername" class="sr-only">Username</label>
-	    <input type="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+	    <input type="username" ng-model="form.username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
 	    <label for="inputPassword" class="sr-only">Password</label>
-	    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+	    <input type="password" ng-model="form.password" id="inputPassword" class="form-control" placeholder="Password" required>
 	    <label for="inputEmail" class="sr-only">Email (optional)</label>
-	    <input type="email" id="inputEmail" class="form-control" placeholder="Email (optional)">
-	    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	    <input type="email" ng-model="form.email" id="inputEmail" class="form-control" placeholder="Email (optional)">
+	    <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="register()">Sign in</button>
 	    <a href="/login">Already have an account? Sign in here</a>
+	    <div class="alert alert-danger" role="alert" ng-show="error">
+		  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+		  <span class="sr-only">Error:</span>
+		  {{ error }}
+		</div>
 	  </form>
 	</div>
 </div>
