Fixed base path issues for deployment configuration

--- a/web/client/app/login/login.html
+++ b/web/client/app/login/login.html
@@ -7,7 +7,7 @@
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" ng-model="form.password" id="inputPassword" class="form-control" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="login()">Sign in</button>
-        <a href="/register">Don't have an account? Register here</a>
+        <a href="register">Don't have an account? Register here</a>
         <div class="alert alert-danger" role="alert" ng-show="error">
 		  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 		  <span class="sr-only">Error:</span>
