--- a/web/client/app/register/register.html
+++ b/web/client/app/register/register.html
@@ -9,7 +9,7 @@
 	    <label for="inputEmail" class="sr-only">Email (optional)</label>
 	    <input type="email" ng-model="form.email" id="inputEmail" class="form-control" placeholder="Email (optional)">
 	    <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="register()">Sign in</button>
-	    <a href="/login">Already have an account? Sign in here</a>
+	    <a href="login">Already have an account? Sign in here</a>
 	    <div class="alert alert-danger" role="alert" ng-show="error">
 		  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 		  <span class="sr-only">Error:</span>
