moved error box display filter for rating - makes the #s higher show ratings next to players in game info

--- a/web/client/index.html
+++ b/web/client/index.html
@@ -52,6 +52,7 @@
           <script src="app/login/login.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/ratingDisplay/ratingDisplay.filter.js"></script>
           <script src="app/register/register.controller.js"></script>
           <script src="app/register/register.js"></script>
           <script src="components/modal/modal.service.js"></script>
