--- a/web/client/app/main/main.html
+++ b/web/client/app/main/main.html
@@ -2,6 +2,13 @@
 
 <div class="container">
   <div class="row">
+    <div class="alert alert-danger" role="alert" ng-show="error">
+      <!-- <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> -->
+      <span class="sr-only"></span>
+        Error: {{ error.error }}
+    </div>
+  </div>
+  <div class="row">
     <div class="col-sm-4">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -16,25 +23,33 @@
           <button type="button" ng-click="createGame()" class="btn btn-primary">New Game</button>
         </div>  
       </div>
-      <div class="alert alert-danger" role="alert" ng-show="error">
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-        <span class="sr-only">Error:</span>
-        {{ error.error }}
-      </div>
     </div>
     <div class="col-sm-8">
       <div ng-show="selectedGame" class="panel panel-default">
         <div class="panel-heading">
             Game Details
         </div>
-        <div class="panel-body">
+        <div ng-show="selectedGame.status == 'Pending'" class="panel-body">
           <ul class="list-group">
+            Players
+            <li ng-repeat="player in selectedGame.players" class="list-group-item"> {{ player.username }}
+              <span class="badge">{{ player.rating.mean | ratingDisplay }}</span>
+            </li>
+          </ul>
+          <button type="button" ng-hide="(selectedGame.creator._id == user._id) || (selectedGame._id == user.currentGame)" ng-click="joinGame()" class="btn btn-primary">Join Game</button>
+           <button type="button" ng-show="selectedGame._id == user.currentGame" ng-click="leaveGame()" class="btn btn-primary">Leave</button>
+          <button type="button" ng-show="selectedGame.creator._id == user._id" ng-click="cancelGame()" class="btn btn-primary">Cancel Game</button>
+        </div>
+        <div ng-show="selectedGame.status == 'In Progress'" class="panel-body">
+          <ul class="list-group">
+            Players
             <li ng-repeat="player in selectedGame.players" class="list-group-item">{{ player.username }}</li>
           </ul>
           <button type="button" ng-hide="(selectedGame.creator._id == user._id) || (selectedGame._id == user.currentGame)" ng-click="joinGame()" class="btn btn-primary">Join Game</button>
            <button type="button" ng-show="selectedGame._id == user.currentGame" ng-click="leaveGame()" class="btn btn-primary">Leave</button>
           <button type="button" ng-show="selectedGame.creator._id == user._id" ng-click="cancelGame()" class="btn btn-primary">Cancel Game</button>
         </div>
+
       </div>
   </div>
 </div>
