added steamy things

--- a/web/client/app/main/main.html
+++ b/web/client/app/main/main.html
@@ -155,6 +155,6 @@
 
 <footer class="footer">
   <div class="container">
-      <p><a href="https://www.youtube.com/watch?v=rivFCwwvoh8">Report Bugs Here</a></p> 
+      <p><a href="https://www.youtube.com/watch?v=rivFCwwvoh8">Report Bugs Here</a> | Powered by Steam</p> 
   </div>
 </footer>
