--- a/web/client/app/main/main.html
+++ b/web/client/app/main/main.html
@@ -39,6 +39,7 @@
             Players
             <li ng-repeat="player in selectedGame.players" class="list-group-item"> {{ player.steamProfile.displayName }}
               <span class="badge">{{ player.rating.mean | ratingDisplay }}</span>
+              <span ng-show="player._id !== selectedGame.creator._id && user._id === selectedGame.creator._id" class="badge" style="background-color:red" ng-click="forbidPlayer(player._id)">Forbid</span>
             </li>
           </ul>
           <button type="button" ng-hide="(selectedGame.creator._id == user._id) || (selectedGame._id == user.currentGame)" ng-click="joinGame()" class="btn btn-primary">Join Game</button>
