--- a/web/client/index.html
+++ b/web/client/index.html
@@ -40,6 +40,7 @@
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/angular-audio/app/angular.audio.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
